--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "ReelyFriends Back-End",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev": "nodemon index.js",
+    "seed": "node ./data/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,10 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
